<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >
    
    <LinearLayout 
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal"
	    android:padding="10dp" >	    
	
		    <ImageView
		        android:id="@+id/status_indicator_online"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:src="@android:drawable/presence_online" />
		    
		    <ImageView
		        android:id="@+id/status_indicator_offline"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:src="@android:drawable/presence_offline" />
		    
	</LinearLayout>
    
    <LinearLayout 
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal"
	    android:padding="20dp" >
    
	    <ImageButton
	        android:id="@+id/command_music"
	        android:text="@string/music"
	        android:layout_width="wrap_content"
	    	android:layout_height="wrap_content"
	    	android:onClick="button_command"
	    	android:tag="music"
	    	android:padding="20dp"
	    	android:src="@drawable/ic_action_headphones" />
	
	    <ImageButton
	        android:id="@+id/command_video"
	        android:text="@string/video"
	        android:layout_width="wrap_content"
	    	android:layout_height="wrap_content"
	    	android:onClick="button_command"
	    	android:tag="video"
	    	android:padding="20dp"
	    	android:src="@drawable/ic_action_video" />
		
	    <ImageButton
	        android:id="@+id/command_fullscreen"
	        android:text="@string/fullscreen"
	        android:layout_width="wrap_content"
	    	android:layout_height="wrap_content"
	    	android:onClick="button_command"
	    	android:tag="fullscreen"
	    	android:padding="20dp"
	    	android:src="@drawable/ic_action_full_screen" />
	    
	     <ImageButton
	        android:id="@+id/command_power"
	        android:text="@string/power"
	        android:layout_width="wrap_content"
	    	android:layout_height="wrap_content"
	    	android:onClick="button_command"
	    	android:tag="power"
	    	android:padding="20dp"
	        android:src="@android:drawable/ic_delete" />

	    
  	</LinearLayout>
    
    <LinearLayout 
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="20dp" >
    
	    <ImageButton
	        android:id="@+id/command_previous"
	        android:text="@string/previous"
	        android:layout_width="wrap_content"
	    	android:layout_height="wrap_content"
	    	android:onClick="button_command"
	    	android:tag="prev"
	    	android:padding="20dp"
	    	android:src="@drawable/ic_action_previous_item" />
	
	    <ImageButton
	        android:id="@+id/command_play"
	        android:text="@string/play"
	        android:layout_width="wrap_content"
	    	android:layout_height="wrap_content"
	    	android:onClick="button_command"
	    	android:tag="play"
	    	android:padding="20dp"
	    	android:src="@drawable/ic_action_play" />
	
	    <ImageButton
	        android:id="@+id/command_next"
	        android:text="@string/next"
	        android:layout_width="wrap_content"
	    	android:layout_height="wrap_content"
	    	android:onClick="button_command"
	    	android:tag="next"
	    	android:padding="20dp"
	    	android:src="@drawable/ic_action_next_item" />
	   
	    
  	</LinearLayout>
    
</LinearLayout>
